--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -1,7 +1,84 @@
-.homer {
-        background-image : homer.jpg;
+@media only screen and (min-device-width: 1201px){
+        .homer{
+                width: 166px;
+                height: 125px;
+                background-image: url(homer.jpg);
+        }
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen
+        and (min-device-width: 1101px)
+        and (max-device-width: 1200px){
+        .homer{
+                background-image: url(homer.jpg);
+                width: 166px;
+                height: 125px;
+                background-position: -166px 0px;
 
+        }
+}
+
+@media only screen
+        and (min-device-width: 1001px)
+        and (max-device-width: 1100px){
+        .homer{
+                background-image: url(homer.jpg);
+                width: 166px;
+                height: 125px;
+                background-position: 0px -125px;
+        }
+}
+
+@media only screen
+        and (min-device-width: 901px)
+        and (max-device-width: 1000px){
+        .homer{
+                background-image: url(homer.jpg);
+                width: 166px;
+                height: 125px;
+                background-position: -166px -125px;
+        }
+}
+
+@media only screen
+        and (min-device-width: 801px)
+        and (max-device-width: 900px){
+        .homer{
+                background-image: url(homer.jpg);
+                width: 166px;
+                height: 125px;
+                background-position: 0px -250px;
+        }
+}
+
+@media only screen
+        and (min-device-width: 701px)
+        and (max-device-width: 800px){
+        .homer{
+                background-image: url(homer.jpg);
+                width: 166px;
+                height: 125px;
+                background-position: -166px -250px;
+        }
+}
+
+@media only screen
+        and (min-device-width: 601px)
+        and (max-device-width: 700px){
+        .homer{
+                background-image: url(homer.jpg);
+                width: 166px;
+                height: 125px;
+                background-position: 0px -375px;
+        }
+}
+
+@media only screen
+        and (max-device-width: 600px){
+        .homer{
+                background-image: url(homer.jpg);
+                width: 166px;
+                height: 125px;
+                background-position: -166px -375px;
+        }
 }
