--- a/responsive/responsive.css
+++ b/responsive/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (min-device-width: 1201px){
+@media only screen and (min-width: 1201px){
         .homer{
                 width: 166px;
                 height: 125px;
@@ -7,8 +7,8 @@
 }
 
 @media only screen
-        and (min-device-width: 1101px)
-        and (max-device-width: 1200px){
+        and (min-width: 1101px)
+        and (max-width: 1200px){
         .homer{
                 background-image: url(homer.jpg);
                 width: 166px;
@@ -19,8 +19,8 @@
 }
 
 @media only screen
-        and (min-device-width: 1001px)
-        and (max-device-width: 1100px){
+        and (min-width: 1001px)
+        and (max-width: 1100px){
         .homer{
                 background-image: url(homer.jpg);
                 width: 166px;
@@ -30,8 +30,8 @@
 }
 
 @media only screen
-        and (min-device-width: 901px)
-        and (max-device-width: 1000px){
+        and (min-width: 901px)
+        and (max-width: 1000px){
         .homer{
                 background-image: url(homer.jpg);
                 width: 166px;
@@ -41,8 +41,8 @@
 }
 
 @media only screen
-        and (min-device-width: 801px)
-        and (max-device-width: 900px){
+        and (min-width: 801px)
+        and (max-width: 900px){
         .homer{
                 background-image: url(homer.jpg);
                 width: 166px;
@@ -52,8 +52,8 @@
 }
 
 @media only screen
-        and (min-device-width: 701px)
-        and (max-device-width: 800px){
+        and (min-width: 701px)
+        and (max-width: 800px){
         .homer{
                 background-image: url(homer.jpg);
                 width: 166px;
@@ -63,8 +63,8 @@
 }
 
 @media only screen
-        and (min-device-width: 601px)
-        and (max-device-width: 700px){
+        and (min-width: 601px)
+        and (max-width: 700px){
         .homer{
                 background-image: url(homer.jpg);
                 width: 166px;
@@ -74,7 +74,7 @@
 }
 
 @media only screen
-        and (max-device-width: 600px){
+        and (max-width: 600px){
         .homer{
                 background-image: url(homer.jpg);
                 width: 166px;
