--- a/notuber/style.css
+++ b/notuber/style.css
@@ -1,5 +1,5 @@
 #map {
-        height: 100%;
+        height: 90%;
 }
 
 html,
@@ -7,4 +7,11 @@ body {
         height: 100%;
         margin: 0;
         padding: 0;
+        background-color: black;
+}
+
+#title {
+        text-align: center;
+        font-family: "Times New Roman", Times, serif;
+        color: #faebd7;
 }
