--- a/notuber/style.css
+++ b/notuber/style.css
@@ -1,18 +1,1 @@
-#map {
-        height: 100%;
-        width: 100%;
-}
-
-html,
-body {
-        height: 100%;
-        margin: 0;
-        padding: 0;
-        background-color: black;
-}
-
-#title {
-        text-align: center;
-        font-family: "Times New Roman", Times, serif;
-        color: #faebd7;
-}
+#map{height:100%;width:100%}body,html{height:100%;margin:0;padding:0;background-color:#000}#title{text-align:center;font-family:"Times New Roman",Times,serif;color:#faebd7}
