--- a/security/style.css
+++ b/security/style.css
@@ -1,23 +1,27 @@
 #title {
         text-align: center;
         font-family: "Times New Roman", Times, serif;
-        color: #ead7d6;
-        font-size: 20pt;
+        color: #23272A;
+        font-size: 25pt;
 }
 
 body {
-        background-color: #23272A;
+        background-color: #ead7d6;
 }
 
 h3 {
-        /* text-align: center; */
         font-family: "Times New Roman", Times, serif;
-        color: #ead7d6;
-        font-size: 13pt;
+        color: #23272A;
+        font-size: 18pt;
 }
 
 p, ol {
   font-family: "Times New Roman", Times, serif;
-        color: #ead7d6;
-        font-size: 10pt;
+        color: #23272A;
+        font-size: 13pt;
+}
+
+img {
+    max-width: 80%;
+    max-height: 80%;
 }
